zeit.cms changes
================

1.53.3 (unreleased)
-------------------

- Fixed isolation of ``product_config`` between tests.


1.53.2 (2012-03-06)
-------------------

- Backout changeset:89a6328dd4d0: This changeset was grafted from editor-ng but
  does not work on default as it changes publication security. The change
  prevents quick publish in zeit.content.cp then.



1.53.1 (2012-03-06)
-------------------

- Testing expected ``/bin/true`` to exist which is not the case on all systems.
  Just using ``true`` now, expecting true to be somewhere in the path.


1.53.0 (2012-03-06)
-------------------

- Added metadata checkbox show commentthread (zeit-mantis 3664)

- Limit the amount of PubliationDependencies that are actually published;
  configurable as product config of zeit.workflow: ``dependency-publish-limit``
  (#10242).

- Use gocept.testing.

- For an article, include ressort and sub-ressort in the breadcrumbs instead
  of the repository path. (#10151)

- Restructured test layer and test cases so as to have a more reliable
  tear-down. (#10456)

- Added helpers for selenium tests: eval JS and wait for conditions in the
  current window. Also use gocept.zcapatch to register temporary views etc.

- Added a checkbox to indicate whether a content object should appear in
  rankings or not. (#10534)


1.52.0 (2011-12-08)
-------------------

- Add handler that updates XMLReferences for MultiResources on checkin
  (for #10042).


1.51.0 (2011-12-01)
-------------------

- Provide another Remotetask-Service, "low-priority", that handles publish
  tasks serially (#10024).


1.50.2 (2011-11-24)
-------------------

- Make link an IXMLContent. It is expected from content to implement
  ICMSContent (which is implied in IXMLContent). (#10017)


1.50.1 (2011-11-13)
-------------------

- Fix brown bag release 1.50.0


1.50.0 (2011-11-13)
-------------------

- Backported test helpers and fixes from the editor-ng branch to the main
  development line.

