@@ -5,6 +5,7 @@ import zeit.cms.browser.view
 import zeit.cms.checkout.interfaces
 import zeit.cms.content.interfaces
 import zeit.cms.interfaces
+import zope.app.appsetup.product
 import zope.cachedescriptors.property
 import zope.location.interfaces
 import zope.traversing.api
@@ -18,13 +19,14 @@ class Breadcrumbs(zeit.cms.browser.view.Base):
     @zope.cachedescriptors.property.Lazy
     def get_breadcrumbs(self):
         """Returns a list of dicts with title and URL."""
-        try:
-            metadata = zeit.cms.content.interfaces.ICommonMetadata(
-                self.context)
-        except TypeError:
-            pass
-        else:
-            return self.get_breadcrumbs_from_commonmetadata(metadata)
+        if self._use_common_metadata:
+            try:
+                metadata = zeit.cms.content.interfaces.ICommonMetadata(
+                    self.context)
+            except TypeError:
+                pass
+            else:
+                return self.get_breadcrumbs_from_commonmetadata(metadata)
         return self.get_breadcrumbs_from_path(self.context)
 
     def get_breadcrumbs_from_commonmetadata(self, context):
@@ -92,3 +94,12 @@ class Breadcrumbs(zeit.cms.browser.view.Base):
                 return self.url(zeit.cms.interfaces.ICMSContent(unique_id))
             except TypeError:
                 return None
+
+    @zope.cachedescriptors.property.Lazy
+    def _use_common_metadata(self):
+        cms_config = zope.app.appsetup.product.getProductConfiguration(
+            'zeit.cms')
+        return (
+            cms_config.get('breadcrumbs-use-common-metadata', '').lower() ==
+            'true')
+
